--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
-        <variable name="user" type="com.exercise.p.emailclient.dto.User"/>
+        <variable name="user" type="com.exercise.p.emailclient.dto.param.User"/>
     </data>
     <LinearLayout
         android:orientation="vertical"
