--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowContentTransitions">true</item>
+        <!--设置title颜色-->
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <!--设置navigationIcon颜色-->
+        <item name="colorControlNormal">@android:color/white</item>
     </style>
     <style name="FullScreen" parent="AppTheme">
         <item name="android:windowFullscreen">true</item>
