--- a/app/src/main/res/drawable/shape_sign_edit.xml
+++ b/app/src/main/res/drawable/shape_sign_edit.xml
@@ -4,6 +4,6 @@
     <solid android:color="@android:color/white"/>
     <stroke
         android:width="1dp"
-        android:color="@color/colorHint"
+        android:color="@color/colorDivider"
         />
 </shape>
