--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.exercise.p.emailclient.activity.FeedbackActivity">
 
@@ -11,15 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="?colorPrimary"
-        android:translationZ="2dp">
+        android:translationZ="2dp"
+        app:title="意见反馈">
 
-        <TextView
-            android:textSize="16sp"
-            android:textColor="#FFF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="意见反馈" />
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
