--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,26 +17,32 @@
             android:layout_height="?actionBarSize"
             android:background="?colorPrimary"
             android:translationZ="2dp"
-            app:titleTextAppearance="@style/ToolbarTitle"/>
+            app:title="所有邮件"/>
+
         <FrameLayout
             android:id="@+id/main_pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center" >
+            android:gravity="center">
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </FrameLayout>
     </LinearLayout>
-    <!--//侧边栏布局内容-->
-    <!--<android.support.design.widget.NavigationView-->
-        <!--android:id="@+id/main_side"-->
-        <!--android:layout_gravity = "start"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="match_parent"-->
-        <!--app:itemTextAppearance="@style/SideText"-->
-        <!--app:headerLayout="@layout/layout_side_header"-->
-        <!--app:menu="@mmenu_actionside" />-->
-</android.support.v4.widget.DrawerLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/main_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_margin="16dp"
+        app:backgroundTint="@color/colorTheme"
+        android:src="@drawable/icon_email_edit"
+        app:fabSize="normal"
+        app:layout_anchor="@id/main_pager"
+        app:layout_anchorGravity="bottom|right|end" />
+
+</android.support.design.widget.CoordinatorLayout>
