--- a/app/src/main/res/layout/activity_manage_account.xml
+++ b/app/src/main/res/layout/activity_manage_account.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,15 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="?colorPrimary"
-        android:translationZ="2dp">
+        android:translationZ="2dp"
+        app:title="管理账号">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="管理账号"
-            android:textColor="#FFF"
-            android:textSize="16sp" />
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
