--- a/app/src/main/res/layout/activity_send.xml
+++ b/app/src/main/res/layout/activity_send.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="show"
+            type="Boolean" />
+
         <variable
             name="mail"
             type="com.exercise.p.emailclient.dto.param.Mail" />
     </data>
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/send_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="?colorPrimary"
-            app:title="写邮件"
-            android:translationZ="2dp">
-        </android.support.v7.widget.Toolbar>
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,121 +27,256 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:minHeight="50dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-                <TextView
-                    style="@style/Text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:textColor="@color/colorTextGrey"
-                    android:text="@string/send" />
-
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:background="@null"
-                    android:focusable="false"
-                    android:text="@={mail.from}"
-                    android:inputType="textMultiLine"
-                    android:textColor="@color/colorTextBlack"
-                    tools:ignore="LabelFor" />
-            </LinearLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/colorDivider" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:minHeight="50dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
-
-                <TextView
-                    style="@style/Text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="start"
-                    android:text="@string/to"
-                    android:textColor="@color/colorTextGrey" />
-
-                <EditText
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:text="@={mail.to}"
-                    android:background="@null"
-                    android:inputType="textMultiLine"
-                    android:textColor="@color/colorTextBlack"
-                    tools:ignore="LabelFor" />
-            </LinearLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/colorDivider" />
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:minHeight="50dp"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
-
-                <EditText
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/send_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:hint="@string/subject"
-                    android:inputType="textMultiLine"
-                    android:minLines="1"
-                    android:text="@={mail.subject}"
-                    android:textColor="@color/colorTextBlack" />
+                    android:layout_height="?actionBarSize"
+                    android:background="?colorPrimary"
+                    android:translationZ="2dp"
+                    app:title="写邮件"></android.support.v7.widget.Toolbar>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:minHeight="50dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp">
+
+                        <TextView
+                            style="@style/Text"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="start"
+                            android:text="@string/send"
+                            android:textColor="@color/colorTextGrey" />
+
+                        <EditText
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:background="@null"
+                            android:focusable="false"
+                            android:inputType="textMultiLine"
+                            android:text="@={mail.from}"
+                            android:textColor="@color/colorTextBlack"
+                            tools:ignore="LabelFor" />
+                    </LinearLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/colorDivider" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:minHeight="50dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp">
+
+                        <TextView
+                            style="@style/Text"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="start"
+                            android:text="@string/to"
+                            android:textColor="@color/colorTextGrey" />
+
+                        <EditText
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="3"
+                            android:background="@null"
+                            android:inputType="textMultiLine"
+                            android:text="@={mail.to}"
+                            android:textColor="@color/colorTextBlack"
+                            tools:ignore="LabelFor" />
+                    </LinearLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/colorDivider" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:minHeight="50dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp">
+
+                        <EditText
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:hint="@string/subject"
+                            android:inputType="textMultiLine"
+                            android:minLines="1"
+                            android:text="@={mail.subject}"
+                            android:textColor="@color/colorTextBlack" />
+                    </LinearLayout>
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/colorDivider" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:minHeight="50dp"
+                        android:orientation="horizontal"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp">
+
+                        <!--<EditText-->
+                        <!--android:id="@+id/send_text"-->
+                        <!--android:layout_width="match_parent"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:background="@null"-->
+                        <!--android:hint="@string/writeEmail"-->
+                        <!--android:inputType="textMultiLine"-->
+                        <!--android:minLines="1"-->
+                        <!--android:text="@={mail.htmlBody}"-->
+                        <!--android:textColor="@color/colorTextBlack" />-->
+
+                        <io.github.mthli.knife.KnifeText
+                            android:id="@+id/knife"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:gravity="top|start"
+                            android:hint="@string/writeEmail"
+                            android:scrollbars="vertical"
+                            android:textColor="@color/colorTextBlack"
+                            app:bulletColor="@color/blue_500"
+                            app:bulletGapWidth="@dimen/bullet_gap_width"
+                            app:bulletRadius="@dimen/bullet_radius"
+                            app:historyEnable="true"
+                            app:historySize="99"
+                            app:linkColor="@color/blue_500"
+                            app:linkUnderline="true"
+                            app:quoteCapWidth="@dimen/quote_gap_width"
+                            app:quoteColor="@color/blue_500"
+                            app:quoteStripeWidth="@dimen/quote_stripe_width" />
+                    </LinearLayout>
+                </LinearLayout>
+
+
             </LinearLayout>
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/colorDivider" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:minHeight="50dp"
+                android:background="@color/colorTheme"
                 android:orientation="horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:visibility="@{show? View.VISIBLE:View.GONE}">
 
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:hint="@string/writeEmail"
-                    android:inputType="textMultiLine"
-                    android:minLines="1"
-                    android:text="@={mail.htmlBody}"
-                    android:textColor="@color/colorTextBlack" />
+                <ImageButton
+                    android:id="@+id/bold"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_bold" />
+
+                <ImageButton
+                    android:id="@+id/italic"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_italic" />
+
+                <ImageButton
+                    android:id="@+id/underline"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_underline" />
+
+                <ImageButton
+                    android:id="@+id/strikethrough"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_strikethrough" />
+
+                <ImageButton
+                    android:id="@+id/bullet"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_bullet" />
+
+                <ImageButton
+                    android:id="@+id/quote"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_quote" />
+
+                <ImageButton
+                    android:id="@+id/link"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_insert_link" />
+
+                <ImageButton
+                    android:id="@+id/clear"
+                    android:layout_width="0dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="1"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_clear" />
+
             </LinearLayout>
         </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
-
-    </LinearLayout>
 </layout>
 
