--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,9 @@
 
     <color name="colorActionModeBackground">#757575</color>
     <color name="colorActionModeBackgroundDark">#616161</color>
+
+    <!--knife-->
+    <color name="blue_200">#FF90CAF9</color>
+    <color name="blue_500">#FF2196F3</color>
+    <color name="blue_700">#FF1976D2</color>
 </resources>
