--- a/app/src/main/res/layout/layout_account_item.xml
+++ b/app/src/main/res/layout/layout_account_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
